--- a/slides.html
+++ b/slides.html
@@ -1164,6 +1164,9 @@ margin-right: 0; }
 <div class="r-stack">
 <div data-id="circle-r" style="background: rgba(39, 128, 227, 0.7); width: 400px; height: 400px; border-radius: 200px; display: flex; align-items: center; justify-content: center; color: white; font-size: 36px; position: relative; left: -125px;">
 <p>R</p>
+<div style="position: absolute; top: 44%; left: 12%; background: rgba(255, 255, 255, 0.7); width: 100px; height: 100px; border-radius: 50px; display: flex; align-items: center; justify-content: center; color: black; font-size: 18px;">
+<p><code>tidyverse</code></p>
+</div>
 <div style="position: absolute; top: 10%; left: 56%; background: rgba(255, 255, 255, 0.7); width: 70px; height: 70px; border-radius: 35px; display: flex; align-items: center; justify-content: center; color: black; font-size: 18px;">
 <p>RStudio</p>
 </div>
@@ -1193,8 +1196,11 @@ margin-right: 0; }
 <p>Data science</p>
 </div>
 </div>
+<div class="fragment" style="text-align: center; margin-top: 60px;">
+<p>R: Statistics and data science</p>
+</div>
 <div class="fragment" style="text-align: center; margin-top: 40px;">
-<p>General Purpose Programming Language</p>
+<p>Python: General Purpose Programming Language</p>
 </div>
 <div class="footer footer-default">
 
